--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,6 +2,11 @@
   <div class="large-8 columns">
     <%= render partial: "posts/new" %>
   </div>
+  <div class="large-4 columns">
+    <% tag_cloud Post.tag_counts, %w{css1 css2 css3 css4} do |tag, css_class| %>
+      <%= link_to tag.name, tag_path(tag.name), class: css_class %>
+    <% end %>
+  </div>
 </div>
 <div class="row">
   <div class= "large-12 columns" id="posts">
