--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -1,14 +1,46 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.border{
-  border: solid 1px #cacaca;
+
+.nav-bar {
+  background-color: rgba(255,255,255,0.99);
+  border-bottom: 1px solid rgba(0,0,0,0.07);
+  box-shadow: 0px 3px 8px -4px rgba(0,0,0,0.15);
+  height: 88px;
+  width: 100%;
+  z-index: 2000;
+  position: relative;
+  h2 {
+    position: absolute;
+    top: 12px;
+    left: 38px;
+    color: #CCC;
+  }
 }
-.border-box{
-  border-radius: 10px;
+.header {
+  background-color: #96f8e3;
+  box-shadow: 0px 3px 8px -4px rgba(0,0,0,0.15);
+  padding: 36px;
+  z-index: 10;
+  h3 {
+    line-height: 1.2;
+    color: #727272;
+  }
+}
+
+.tags-cloud {
+  margin-top: 16px;
+  padding: 14px;
+}
+
+.top-pad {
+  padding: 25px;
 }
 .glassy-bg{
-  background-color: rgba(0, 0, 0, 0.1)
+  box-shadow: 0px 3px 8px -4px rgba(0,0,0,0.15);
+  background: white;
+  border-radius: 4px;
+  padding-bottom: 12px;
 }
 
 .mt{
@@ -23,4 +55,14 @@
 }
 .pb{
   padding-bottom: 10px;
+}
+
+footer {
+  height: 50px;
+  line-height: 50px;
+  color: #aaa;
+  text-align: center;
+  width: 100%;
+  background-color: white;
+  margin-top: 27px;
 }
