transferring tag counter function from post.rb to tag.rb

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div class="tags-cloud glassy-bg">
       <h4>Tags Cloud</h4>
-      <% tag_cloud Post.tag_counts, %w{css1 css2 css3 css4} do |tag, css_class| %>
+      <% tag_cloud Tag.counts, %w{css1 css2 css3 css4} do |tag, css_class| %>
         <%= link_to tag.name, tag_path(tag.name), class: css_class %>
       <% end %>
     </div>
