--- a/app/views/posts/_new.html.erb
+++ b/app/views/posts/_new.html.erb
@@ -1,7 +1,7 @@
 <div class="row text-center">
   <%= form_for(Post.new, remote: true) do |f| %>
     <div class="large-10 large-centered columns">
-      <%= f.text_field :auther, placeholder: "Auther name" %>
+      <%= f.text_field :author, placeholder: "Author name" %>
     </div>
     <div class="large-10 large-centered columns">
       <%= f.text_area :content, placeholder: "Your post", rows: 5 %>
