--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,6 @@
 <%= div_for post do %>
   <div class="large-12 columns border border-box glassy-bg mt pt">
-    <strong><%= h(post.auther) %></strong><br />
+    <strong><%= h(post.author) %></strong><br />
     <sup class="text-muted">From <%= time_ago_in_words(post.created_at)%></sup><br />
     <div class="mb pb">
       <%= h(post.content) %>
