working tags and search bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,10 @@
 
   <body>
     <nav class="nav-bar" data-topbar role="navigation">
-      <h2>Tagging in Rails</h2>
+      <h2>Airbnb</h2>
     </nav>
     <nav class="header text-center">
-      <h3>A SitePoint tutorial on tagging systems in Rails</h3>
+      <h3>Find or create a listing</h3>
     </nav>
     <%= yield %>
     <footer>
