--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,16 +1,34 @@
+
 <div class="row mt pt">
   <div class="large-5 columns">
+  <%= form_tag(tag_path, method: :post) do %>
+  <%= text_field_tag :tag, nil, placeholder: "Search Tags Here" %>
+  <%= submit_tag 'Search', name: nil %>
+<% end %>
     <div class="top-pad glassy-bg">
       <%= render partial: "posts/new" %>
     </div>
     <div class="tags-cloud glassy-bg">
+    <div class="inl">
       <h4>Tags Cloud</h4>
       <% tag_cloud Tag.counts, %w{css1 css2 css3 css4} do |tag, css_class| %>
-        <%= link_to tag.name, tag_path(tag.name), class: css_class %>
+        <%= link_to tag.name, tagl_path(tag.name), class: css_class %>,
       <% end %>
+      </div>
     </div>
   </div>
+  <p> Posts</p>
   <div class= "large-7 columns" id="posts">
+
     <%= render partial: @posts.reverse %>
+
+    
+    <%# i = 0 %>
+    <%# while i < @posts.collect(&:tags).flatten.uniq.length %> 
+    <%#= @posts.collect(&:tags).flatten.uniq[i][:name] %>
+    <%# i+= 1 %>
+    <%#end%>
+    <!-- raw tag_links(post.all_tags) -->
+    <%#= render text: Hash[@posts.group_by{ |author| author }.map{ |k,v| v.size >= 1 && [k, v.size] }]%>
   </div>
 </div>
