switched over to listings, gained users

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,18 @@
   <body>
     <nav class="nav-bar" data-topbar role="navigation">
       <h2>Airbnb</h2>
+      <% if signed_in? %>
+      Signed in as: <%= current_user.email %>
+      <%= button_to 'Sign out', sign_out_path, method: :delete %>
+    <% else %>
+      <%= link_to 'Sign in', sign_in_path %>
+    <% end %>
+
+    <div id="flash">
+      <% flash.each do |key, value| %>
+        <div class="flash <%= key %>"><%= value %></div>
+      <% end %>
+    </div>
     </nav>
     <nav class="header text-center">
       <h3>Find or create a listing</h3>
