--- a/app/views/listings/_new.html.erb
+++ b/app/views/listings/_new.html.erb
@@ -1,5 +1,5 @@
 <div class="row text-center">
-  <%= form_for(Post.new, remote: true) do |f| %>
+  <%= form_for(Listing.new, remote: true) do |f| %>
     <div class="large-10 large-centered columns">
       <%= f.text_field :author, placeholder: "Author name" %>
     </div>
@@ -10,7 +10,7 @@
       <%= f.text_field :all_tags, placeholder: "Tags separated with comma" %>
     </div>
     <div class="large-10 large-centered columns">
-      <%= f.submit "Post", class: "button"%>
+      <%= f.submit "Listing", class: "button"%>
     </div>
   <% end %>
 </div>
