--- a/app/views/listings/_new.html.erb
+++ b/app/views/listings/_new.html.erb
@@ -10,7 +10,7 @@
       <%= f.text_field :all_tags, placeholder: "Tags separated with comma" %>
     </div>
     <div class="large-10 large-centered columns">
-      <%= f.submit "Listing", class: "button"%>
+      <%= f.submit "Submit", class: "button"%>
     </div>
   <% end %>
 </div>
