--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -18,7 +18,7 @@
     </div>
   </div>
   <p> Listings</p>
-  <div class= "large-7 columns" id="posts">
+  <div class= "large-7 columns" id="listings">
 
     <%= render partial: @listings.reverse %>
 
