first try to send an email

--- a/app/views/listings/_new.html.erb
+++ b/app/views/listings/_new.html.erb
@@ -8,7 +8,7 @@
         <%= f.text_field :title, placeholder: "Listing title" %>
       </div>
       <div class="large-10 large-centered columns">
-        <%= f.number_field :price, placeholder: "Price" %>
+        <%= f.number_field :price, placeholder: "Nightly Price" %>
       </div>
       <div class="large-10 large-centered columns">
         <%= f.text_field :location, placeholder: "Location" %>
