--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -12,7 +12,7 @@
     </div>
     <div class="tags-cloud glassy-bg">
 
-
+<%= link_to "here", booking_email_path(current_user) %>
 
     <div class="inl">
       <h4>Tags Cloud</h4>
