--- a/app/views/listings/create.js.erb
+++ b/app/views/listings/create.js.erb
@@ -7,10 +7,5 @@ $('#new_listing')[0].reset();
 
   <% pane = panel.value %>
 <% if !pane.value.to_s.gsub(/(\d{4})-(\d{2})-(\d{2})....(\d{4})-(\d{2})-(\d{2})/, '\6').to_i.nil?%>
-  <% payment = 5*((pane.value.to_s.gsub(/(\d{4})-(\d{2})-(\d{2})....(\d{4})-(\d{2})-(\d{2})/, '\6').to_i) + 1 - (pane.value.to_s.gsub(/(\d{4})-(\d{2})-(\d{2})....(\d{4})-(\d{2})-(\d{2})/, '\3').to_i))%>
-  <% if payment <= 0 %>
-    <% payment += 29 %>
-  <%end%>
-<% else %>
+  <% payment = @listing.price*((pane.value.to_s.gsub(/(\d{4})-(\d{2})-(\d{2})....(\d{4})-(\d{2})-(\d{2})/, '\6').to_i) + 1 - (pane.value.to_s.gsub(/(\d{4})-(\d{2})-(\d{2})....(\d{4})-(\d{2})-(\d{2})/, '\3').to_i))%>
 <%end%>
-}
