--- a/app/views/reservation_mailer/welcome_email.html.erb
+++ b/app/views/reservation_mailer/welcome_email.html.erb
@@ -8,7 +8,7 @@
     <p>
       To login to the site, just follow this link: <%= link_to "welcome", root_url %>.
     </p>
-    <p>Thanks for joining and have a great day!</p>
+    <p>Thanks for joining and have a great day!!</p>
 
     <%= image_tag attachments['bb558ec7-1bcb-4585-a03b-bc540aa0b201.c10.jpg'].url %>
   </body>
