changed email params

--- a/app/views/reservation_mailer/welcome_email.text.erb
+++ b/app/views/reservation_mailer/welcome_email.text.erb
@@ -1,9 +1,6 @@
-Welcome to example.com, <%= @user.name %>
+Welcome to pairbnb, <%= @user.name %>
 ===============================================
  
-You have successfully signed up to example.com,
-your username is: <%= @user.login %>.
- 
-To login to the site, just follow this link: <%= @url %>.
+ You have successfully booked a listing
  
 Thanks for joining and have a great day!
