--- a/app/views/reservation_mailer/welcome_email.text.erb
+++ b/app/views/reservation_mailer/welcome_email.text.erb
@@ -1,4 +1,4 @@
-Welcome to pairbnb, <%= @user.name %>
+Welcome to pairbnb,
 ===============================================
  
  You have successfully booked a listing
