--- a/app/views/reservation_mailer/welcome_email.html.erb
+++ b/app/views/reservation_mailer/welcome_email.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to pairbnb.com, <%= @user.name %></h1>
+    <h1>Welcome to pairbnb </h1>
     <p>
     </p>
     <p>Thanks for joining and have a great day!!</p>
