--- a/app/views/listings/_new.html.erb
+++ b/app/views/listings/_new.html.erb
@@ -28,7 +28,7 @@
       <div class="large-10 large-centered columns">
         <%= f.text_field :all_tags, placeholder: "Tags separated with comma" %>
       </div>
-      Image upload
+      <div align="center">Image upload</div>
       <div class="large-10 large-centered columns">
         <%= f.file_field :image, multiple: true, placeholder: "Images" %>
       </div>      
