--- a/app/assets/stylesheets/listings.css.scss
+++ b/app/assets/stylesheets/listings.css.scss
@@ -8,7 +8,6 @@
   box-shadow: 0px 3px 8px -4px rgba(0,0,0,0.15);
   height: 88px;
   width: 100%;
-  z-index: 2000;
   position: relative;
   h2 {
     position: absolute;
@@ -20,7 +19,7 @@
 .header {
   background-color: #96f8e3;
   box-shadow: 0px 3px 8px -4px rgba(0,0,0,0.15);
-  padding: 36px;
+  padding: 30px;
   z-index: 10;
   h3 {
     line-height: 1.2;
@@ -43,6 +42,16 @@
   padding-bottom: 12px;
 }
 
+.reserve{
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 3px;
+  border-color: lightblue;
+  text-align:center;
+  background-color: white;
+  display: inline-block;
+}
+
 .mt{
   margin-top: 10px;
 }
@@ -55,6 +64,10 @@
 }
 .pb{
   padding-bottom: 10px;
+}
+
+.pr{
+  padding-right: 10px;
 }
 
 footer {
