--- a/app/views/listings/_listing.html.erb
+++ b/app/views/listings/_listing.html.erb
@@ -2,11 +2,11 @@
   <div class="large-12 columns border border-box glassy-bg mt pt">
     <strong><%= h(listing.title) %></strong>  $<strong class="inl"><%= h(listing.price) %></strong><br />
     <sup class="text-muted">From <%= time_ago_in_words(listing.created_at)%></sup><br />
-    <div><%= link_to 'Reserve This Listing', listing_path(listing.id) %></div>
+    <div class="reserve"><b><%= link_to 'Check Out This Listing', listing_path(listing.id) %></b></div>
     <div class="mb pb">
       <%= h(listing.description) %>
       </div>
-     <% listing.image.each do |f| %>
+     <% listing.image.first(4).each do |f| %>
      <div class="inl">
       <img src=<%= h(f.url) %> height=250px width=250px>
       </div>
