--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -104,7 +104,7 @@ document.getElementById("lab").innerHTML = "Amount: $" + (payment * <%= @listing
 
 <div class='lightbox hidden'><div class='lightbox-content'>
   <a href="#" class='lightbox-close'>Close</a><br/><div class='lightbox-image'>
-  <img src="https://images-na.ssl-images-amazon.com/images/I/51Me0XRhfxL._AA300_.jpg">
+  <img src="">
 </div>
 
 <script>
